// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReportCollapsibleContainerControl render with buttonAriaLabel set to: some button label 1`] = `
<DocumentFragment>
  <div
    class="collapsible-container collapsed"
  >
    <h5
      class="headingElementForLevel title-container"
    >
      <button
        aria-controls="content-container-some-id"
        aria-expanded="false"
        aria-label="some button label"
        class="collapsible-control"
      >
        <div>
          Some header
        </div>
      </button>
    </h5>
    <div
      aria-hidden="true"
      class="collapsible-content"
      id="content-container-some-id"
    >
      <div>
        Some content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ReportCollapsibleContainerControl render with buttonAriaLabel set to: undefined 1`] = `
<DocumentFragment>
  <div
    class="collapsible-container collapsed"
  >
    <h5
      class="headingElementForLevel title-container"
    >
      <button
        aria-controls="content-container-some-id"
        aria-expanded="false"
        class="collapsible-control"
      >
        <div>
          Some header
        </div>
      </button>
    </h5>
    <div
      aria-hidden="true"
      class="collapsible-content"
      id="content-container-some-id"
    >
      <div>
        Some content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ReportCollapsibleContainerControl render with containerClassName set to: a-container 1`] = `
<DocumentFragment>
  <div
    class="collapsible-container a-container collapsed"
  >
    <h5
      class="headingElementForLevel title-container"
    >
      <button
        aria-controls="content-container-some-id"
        aria-expanded="false"
        class="collapsible-control"
      >
        <div>
          Some header
        </div>
      </button>
    </h5>
    <div
      aria-hidden="true"
      class="collapsible-content"
      id="content-container-some-id"
    >
      <div>
        Some content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ReportCollapsibleContainerControl render with containerClassName set to: undefined 1`] = `
<DocumentFragment>
  <div
    class="collapsible-container collapsed"
  >
    <h5
      class="headingElementForLevel title-container"
    >
      <button
        aria-controls="content-container-some-id"
        aria-expanded="false"
        class="collapsible-control"
      >
        <div>
          Some header
        </div>
      </button>
    </h5>
    <div
      aria-hidden="true"
      class="collapsible-content"
      id="content-container-some-id"
    >
      <div>
        Some content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ReportCollapsibleContainerControl render with contentClassName set to: content-class-name-a 1`] = `
<DocumentFragment>
  <div
    class="collapsible-container collapsed"
  >
    <h5
      class="headingElementForLevel title-container"
    >
      <button
        aria-controls="content-container-some-id"
        aria-expanded="false"
        class="collapsible-control"
      >
        <div>
          Some header
        </div>
      </button>
    </h5>
    <div
      aria-hidden="true"
      class="collapsible-content"
      id="content-container-some-id"
    >
      <div>
        Some content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ReportCollapsibleContainerControl render with contentClassName set to: undefined 1`] = `
<DocumentFragment>
  <div
    class="collapsible-container collapsed"
  >
    <h5
      class="headingElementForLevel title-container"
    >
      <button
        aria-controls="content-container-some-id"
        aria-expanded="false"
        class="collapsible-control"
      >
        <div>
          Some header
        </div>
      </button>
    </h5>
    <div
      aria-hidden="true"
      class="collapsible-content"
      id="content-container-some-id"
    >
      <div>
        Some content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ReportCollapsibleContainerControl render with id set to: some id 1`] = `
<DocumentFragment>
  <div
    class="collapsible-container collapsed"
  >
    <h5
      class="headingElementForLevel title-container"
    >
      <button
        aria-controls="content-container-some id"
        aria-expanded="false"
        class="collapsible-control"
      >
        <div>
          Some header
        </div>
      </button>
    </h5>
    <div
      aria-hidden="true"
      class="collapsible-content"
      id="content-container-some id"
    >
      <div>
        Some content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ReportCollapsibleContainerControl render with id set to: undefined 1`] = `
<DocumentFragment>
  <div
    class="collapsible-container collapsed"
  >
    <h5
      class="headingElementForLevel title-container"
    >
      <button
        aria-controls="content-container-undefined"
        aria-expanded="false"
        class="collapsible-control"
      >
        <div>
          Some header
        </div>
      </button>
    </h5>
    <div
      aria-hidden="true"
      class="collapsible-content"
      id="content-container-undefined"
    >
      <div>
        Some content
      </div>
    </div>
  </div>
</DocumentFragment>
`;
